--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
+    "tw-elements": "^1.0.0-beta1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
