--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
     "tw-elements": "^1.0.0-beta1",
