--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.8.2",
